# flashmachete

./: 2paramgrrid.csv  3paramgrid.csv  ActionInitialization.cc  ActionInitialization.hh  Analysis.cc  Analysis.hh  BeamlineGeometry.cc  BeamlineGeometry.hh  CMakeCache.txt  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  ExitPlane.cc  ExitPlane.hh  Makefile  PhantomGeometry.cc  PhantomGeometry.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  allpdd.ipynb  cmake_install.cmake  conv9source.mac  env_flash.sh  gate_env.sh  graphsfluence.ipynb  interactive.mac  main.cc  notesforflashelectronsim  paramgrid.csv  pdd.mac  pddmaker.ipynb  run.mac  run_pdd.slurm  runpossib.mac  runpossib.slurm  (+3 more)
macros/: beamdiag_template.mac  pddpossib.mac  vis.mac
